crates/snapshot-tests/tests/snapshots/parser__bad_table_names__newline.snap
---
source: snapshot-tests/tests/parser.rs
expression: error
---
error[UnterminatedString]: invalid basic string, expected `"`
  ┌─ newline:1:3
  │
1 │ ["
  │   ^ expected `"`
